# Emoji-Translator

./: CNAME  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml  deploy.yml
discord-bot/: Cargo.toml  README.md
discord-bot/src/: main.rs
images/: test.rs
pkg/: package.json  subslay.d.ts  subslay.js  subslay_bg.wasm  subslay_bg.wasm.d.ts
site/: index.html
src/: lib.rs
subslay/: Cargo.toml  README.md
subslay-wasm/: Cargo.toml  README.md
subslay-wasm/src/: lib.rs
subslay/data/: emoji.txt
subslay/src/: lib.rs
subslay/static/: emoji.json
subslay/tools/: build_emoji_vectors.py  emoji.json  emoji.txt  emoji_keywords.json
