[package]
name = "subslay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
serde-wasm-bindgen = "0.6"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[profile.release]
opt-level = 3
lto = true
